--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -1,15 +1,12 @@
-
-
 .contact {
   height: 100%;
-//   max-width: 1366px;
-padding: 5rem 25rem;
+  //   max-width: 1366px;
+  padding: 5rem 25rem;
   margin: auto;
   display: flex;
   align-items: center;
   gap: 30px;
-  // background: linear-gradient(180deg, #fff, #0a0b1b);
-
+  background: linear-gradient(180deg, #7ad3a6, #fff);
 
   .textContainer {
     flex: 1;
@@ -17,23 +14,24 @@ padding: 5rem 25rem;
     flex-direction: column;
     gap: 30px;
 
-
     h1 {
       font-size: 80px;
       line-height: 88px;
       text-shadow: 0px 10px 20px #00000060;
-      color: rgb(75, 50, 3);
+      color: #025951;
       font-family: var(--font-round);
     }
-    
+
     span {
-        font-weight: 300;
-        font-family: var(--font-round);
-        padding-left: 1rem;
-      }
-      h2{
-        font-family: var(--font-round);
-        padding-left: 1rem;
+      font-weight: 300;
+      font-family: var(--font-round);
+      padding-left: 1rem;
+    }
+    h2 {
+      color: #129797;
+      font-family: var(--font-round);
+      padding-left: 1rem;
+      letter-spacing: 3px;
     }
   }
 
@@ -42,7 +40,7 @@ padding: 5rem 25rem;
     position: relative;
 
     .phoneSvg {
-      stroke: orange;
+      stroke: #038c3e;
       position: absolute;
       margin: auto;
       z-index: -1;
@@ -56,34 +54,30 @@ padding: 5rem 25rem;
       input,
       textarea {
         padding: 15px;
-        background-color: rgb(255, 231, 187);
-        background: linear-gradient(180deg,#fff 80%, rgb(255, 231, 187));
+        background: linear-gradient(180deg, #fff 80%);
         border: 1px solid black;
         color: white;
         border-radius: 5px;
         font-family: var(--font-round);
         font-size: 1.2rem;
-
-
-
       }
 
       button {
         padding: 10px;
         border: none;
-        background-color: orange;
+        background-color: #02735e;
         cursor: pointer;
         font-size: 1rem;
         font-family: var(--font-round);
         border-radius: 5px;
         transition: 0.3s;
         text-align: center;
-    }
-    button:hover{
+      }
+      button:hover {
         letter-spacing: 4px;
         font-weight: 900;
         background-color: black;
-        color: orange;
+        color: #0cf25d;
       }
     }
   }
