--- a/src/Components/Skills/skill.scss
+++ b/src/Components/Skills/skill.scss
@@ -2,26 +2,28 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(205,157,255,1));
 
     .skills-title{
-        font-family: var(--font-round);
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-weight: 900;
         color: #fff;
         font-size: 4rem;
         text-shadow: 0px 10px 20px #00000060;
-
     }
-    
     .skills-chart{
-        height: 60%;
-        width: 100%;
+        height: 50%;
+        width: 50%;
     }
 }
 
-.label{
-    font-family: var(--font-round);
+.divider{
+    width: 1px;
+    height: 60%;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(205,157,255,1));
+
 }
