--- a/src/Components/HireMe/hire.scss
+++ b/src/Components/HireMe/hire.scss
@@ -3,13 +3,13 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 
-    background: linear-gradient(180deg, rgba(255,255,255,1)20%, #098b9d);
+    background: linear-gradient(180deg, rgba(255,255,255,1), #098b9d 98%);
     .hire-title{
         font-family: var(--font-round);
-        font-size: 4rem;
-        color: #098b9d;
+        font-size: 8rem;
+        color: #fff;
         padding: 2rem;
         text-shadow: 0px 10px 20px #00000060;
         font-weight: 900;
