--- a/src/Components/Skills/skill.scss
+++ b/src/Components/Skills/skill.scss
@@ -1,29 +1,74 @@
-.skills{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    // align-items: center;
-    justify-content: center;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(205,157,255,1));
+.skills {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  // align-items: center;
+  // justify-content: center;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(205, 157, 255, 1)
+  );
 
-    .skills-title{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 900;
-        color: #fff;
-        font-size: 4rem;
-        text-shadow: 0px 10px 20px #00000060;
+  .skills-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    color: #fff;
+    font-size: 4rem;
+    text-shadow: 0px 10px 20px #00000060;
+  }
+  .skills-chart {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    .skill-bars{
+      height: 50%;
+      width: 100%;
     }
-    .skills-chart{
-        height: 50%;
-        width: 50%;
-    }
+  }
 }
 
-.divider{
-    width: 1px;
-    height: 60%;
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(205,157,255,1));
+.divider {
+  width: 1px;
+  height: 55%;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(205, 157, 255, 1)
+  );
+}
+.design-skills,
+.coding-skills {
+  display: grid;
+  gap: 2rem;
+  padding: 2rem;
+  justify-content: center;
+//   grid-template-rows: repeat(auto-fill, 100px);
+  grid-template-columns: repeat(4, 1fr);
+}
 
+.logo-container {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 1rem;
+  background: white;
+//   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -5px 2px inset;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  transition: 0.5s;
+  img {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 1.5rem;
+  }
+}
+.logo-container:hover{
+    scale: 1.4;
+    background: darkgray;
 }
