--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -30,8 +30,12 @@
     h2 {
       color: #129797;
       font-family: var(--font-round);
-      padding-left: 1rem;
+      padding: 0 0 0.5rem 1rem;
       letter-spacing: 3px;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+
     }
   }
 
