--- a/src/Components/Hero/hero.scss
+++ b/src/Components/Hero/hero.scss
@@ -1,4 +1,4 @@
-
+@import '../../app.scss';
 
 
 .hero {
@@ -14,15 +14,36 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+
+  @include desktop{
+    padding-left: 100px;
+  }
+  @include laptop{
+    padding-left: 50px;
+  }
+  @include tablet{
+    flex-direction: column;
+    padding: 200px 0 0 0;
+  }
+
+  
   .hero-wrapper {
     z-index: 10;
     .text-container {
-      padding: 1rem 0;
+      @include tablet{
+        text-align: center;
+      }
       .header-title {
         font-family: var(--font-nice);
         font-size: 5rem;
         color: white;
         text-shadow: 0px 10px 20px #00000060;
+        @include desktop{
+          font-size: 4rem;
+        }
+        @include tablet{
+          font-size: 3rem;
+        }
 
       }
       .header-name {
@@ -30,19 +51,34 @@
         color: #fff;
         padding: 2rem 5px;
         text-shadow: 0px 10px 20px #f5b403;
-
         font-size: 4rem;
+        @include desktop{
+          font-size: 3rem;
+        }
+        @include tablet{
+          font-size: 2rem;
+        }
     }
     .header-content{
         font-size: 1.4rem;
         font-weight: bolder;
         color: #f5b403;
+        @include desktop{
+          font-size: 1.1rem;
+        }
+        @include tablet{
+          font-size: 0.9rem;
+        }
         .highlight{
             color: #ffffff;
         }
       }
     }
   }
+
+
+
+
   .slidingTextContainer-2 {
     z-index: 1;
     position: absolute;
@@ -52,6 +88,12 @@
     color: #ffffff20;
     width: 50%;
     font-weight: bold;
+    @include desktop{
+      font-size: 30vh;
+    }
+    @include tablet{
+      font-size: 20vh;
+    }
   }
   .slidingTextContainer-1 {
     z-index: 1;
@@ -64,12 +106,27 @@
     color: #ffffff50;
     width: 50%;
     font-weight: bold;
+    @include desktop{
+      font-size: 12vh;
+    }
+    @include tablet{
+      top: 9vh;
+      font-size: 8vh;
+    }
   }
 
 
 }
 .hero-wrapper {
   height: 100%;
+  @include tablet{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+  @include mobile{
+    padding: 0 0.5rem;
+  }
   .text-container {
     height: inherit;
     display: flex;
@@ -84,6 +141,22 @@
   display: flex;
   justify-content: center;
   z-index: 10;
+
+  @include desktop{
+      height: 100%;
+      width: 50%;
+    }
+    @include laptop{
+      height: 80%;
+      width: 45%;
+    }
+    @include tablet {
+      height: 120%;
+      width: 100%;
+    }
+    @include mobile{
+      width: 100%;
+    }
 }
 
 
@@ -99,6 +172,11 @@
         transition: 0.5s;
         font-weight: 700;
         font-size: 1.5rem;
+        
+        @include tablet{
+          padding: 0.6rem;
+          font-size: 1rem;
+        }
 
     }
     .button:hover{
@@ -110,5 +188,9 @@
 
 .mouse-icon{
     padding: 1rem 0;
+
+    @include tablet{
+      display: none;
+    }
 }
 
