--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -1,16 +1,24 @@
+@import '../../app.scss';
+
 .nav-container{
   width: 100%;
   position: fixed;
   z-index: 100;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 .wrapper {
   width: 100%;
-  min-height: 150px;
-//   background: #ddeef7;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
+  @include tablet{
+    height: 100px;
+  }
 }
 .icon {
   display: inline-block;
@@ -28,7 +36,10 @@
   box-shadow: 0px 20px 40px rgba(15, 15, 15, 0.3);
   border-radius: 30px;
   position: relative;
-
+  @include tablet{
+    padding: 10px 10px 0px;
+  }
+  
   &:before {
     content: "";
     width: 120px;
@@ -119,3 +130,4 @@
     z-index: 2;
   }
 }
+
