--- a/src/Components/Parallax/parallax.scss
+++ b/src/Components/Parallax/parallax.scss
@@ -1,9 +1,13 @@
+@import '../../app.scss';
+
+
 .parallax{
     height: 100%;
     width: 100%;
     position: relative;
     background-image: url('../../Assets/1-sky.png');
     background-size: cover;
+
 
     span{
         font-size: 12rem;
@@ -15,13 +19,17 @@
         color: white;
         font-weight: 900;
         text-shadow: 0px 10px 20px #00000060;
+        @include desktop{
+            font-size: 10rem;
+        }
+        @include laptop{
+            font-size: 7rem;
+        }
     }
 
     .stars{
         background-image: url('../../Assets/2-stars.png');
         background-size:contain;
-        // background-repeat: repeat-x;
-
         height: 100%;
         width: 200%;
         position: absolute;
@@ -34,6 +42,7 @@
         height: 100%;
         width: 100%;
         position: absolute;
+
     }
     .trees{
         background-image: url('../../Assets/4-trees.png');
@@ -42,6 +51,7 @@
         width: 100%;
         position: absolute;
         z-index: 20;
+
     }
 }
 //-------------------------------------------------------------------------------------
@@ -62,6 +72,12 @@
         color: white;
         font-weight: 900;
         text-shadow: 0px 10px 20px #00000060;
+        @include desktop{
+            font-size: 10rem;
+        }
+        @include laptop{
+            font-size: 7rem;
+        }
     }
 
     .stars{
