--- a/src/app.scss
+++ b/src/app.scss
@@ -48,7 +48,6 @@ a{
 
 section{
     height: 100vh;
-    // scroll-snap-align: center;
 }
 
 .bg-purple{
@@ -74,18 +73,23 @@ section{
 
 // For Mobile devices
 
-@mixin mobile {
-    @media (max-width: 800px) {
-        @content;
-    }
-}
-@mixin tablet {
-    @media (max-width: 1400px) {
+@mixin desktop {
+    @media (max-width: 1600px) {
         @content;
     }
 }
 @mixin laptop {
+    @media (max-width: 1200px) {
+        @content;
+    }
+}
+@mixin tablet {
     @media (max-width: 800px) {
+        @content;
+    }
+}
+@mixin mobile {
+    @media (max-width: 500px) {
         @content;
     }
 }
