--- a/src/Components/HireMe/hire.scss
+++ b/src/Components/HireMe/hire.scss
@@ -1,22 +1,51 @@
+@import '../../app.scss';
+
 .hire{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-
     background: linear-gradient(180deg, rgba(255,255,255,1), #098b9d 98%);
+    @include laptop{
+        flex-direction: column;
+        justify-content: center;
+    }
+    @include tablet{
+        justify-content: space-evenly;
+    }
+
     .hire-title{
         font-family: var(--font-round);
-        font-size: 8rem;
+        font-size: 6rem;
         color: #fff;
-        padding: 2rem;
+        padding: 1rem;
         text-shadow: 0px 10px 20px #00000060;
         font-weight: 900;
+        @include desktop{
+            font-size: 5rem;
+            text-align: center;
+        }
+        @include tablet{
+            font-size: 4rem;
+        }
     }
 
     .hire-radar{
         height: 60%;
         width: 50%;
+        overflow: hidden;
+        @include desktop{
+            height: 50%;
+            width: 80%;
+        }
+        @include laptop{
+            height: 50%;
+            width: 100%;
+        }
+        @include tablet{
+            width: 110%;
+            height: 40%;
+        }
     }
 }
