--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -1,53 +1,80 @@
+@import '../../app.scss';
+
 .contact {
   height: 100%;
-  //   max-width: 1366px;
-  padding: 5rem 25rem;
+  padding: 5rem 10rem;
   margin: auto;
   display: flex;
   align-items: center;
-  gap: 30px;
+  justify-content: space-evenly;
   background: linear-gradient(180deg, #7ad3a6, #fff);
+  @include laptop{
+    flex-direction: column;
+    text-align: center;
+  }
+  @include tablet{
+    padding: 5rem 5rem;
+  }
 
   .textContainer {
-    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 30px;
-
     h1 {
       font-size: 80px;
       line-height: 88px;
       text-shadow: 0px 10px 20px #00000060;
       color: #025951;
       font-family: var(--font-round);
+      @include desktop{
+        font-size: 70px;
+      }
     }
 
     span {
       font-weight: 300;
       font-family: var(--font-round);
       padding-left: 1rem;
+      
     }
-    h2 {
+    p {
       color: #129797;
       font-family: var(--font-round);
       padding: 0 0 0.5rem 1rem;
-      letter-spacing: 3px;
       display: flex;
       align-items: center;
       gap: 15px;
-
+      font-size: 1.5rem;
+      @include laptop{
+        display: flex;
+        justify-content: center;
+      }
     }
   }
 
   .formContainer {
-    flex: 1;
     position: relative;
-
+    width: 80%;
+    padding: 0 4rem;
+    @include laptop{
+      width: 100%;
+    }
+    @include tablet{
+      width: 100%;
+      padding: 0 0;
+    }
     .phoneSvg {
       stroke: #038c3e;
       position: absolute;
       margin: auto;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
       z-index: -1;
+      @include laptop{
+        display: none;
+      }
     }
 
     form {
@@ -72,6 +99,7 @@
         background-color: #02735e;
         cursor: pointer;
         font-size: 1rem;
+        color: white;
         font-family: var(--font-round);
         border-radius: 5px;
         transition: 0.3s;
