--- a/src/Components/Portfolio/portfolio.scss
+++ b/src/Components/Portfolio/portfolio.scss
@@ -1,3 +1,5 @@
+@import '../../app.scss';
+
 .portfolio{
     background: linear-gradient(180deg, #5c9c09, #7ad3a6 10%);
     position: relative;
@@ -22,35 +24,47 @@
             height: 1rem;
             border-radius: 5rem;
             background-color: white;
-            z-index: -100;
+            z-index: 1000;
         }
     }
 
     .container{
-        display: flex;
-        align-items: center;
-        justify-content: center;
         width: 100%;
         height: 100%;
-
         .wrapper{
             display: flex;
-            gap: 50px;
-            max-width: 1440px;
+            padding: 10rem;
+            width: 100%;
+            gap: 30px;
             height: 100%;
-            margin: auto;
             align-items: center;
-            justify-content: center;
+            @include desktop{
+                padding: 4rem;
+            }
+            @include laptop{
+                flex-direction: column;
+            }
             
             .imageContainer{
-                flex: 1;
                 padding: 1rem;
+                z-index: 20;
                 box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-                height: 54%;
+                height: 64%;
                 border-top-right-radius: 3rem;
                 border-bottom-left-radius: 3rem;
                 background-color: #fff;
                 animation: float 5s ease-in-out infinite;
+                @include desktop{
+                    height: 50%;
+                }
+                @include laptop{
+                    height: 600px;
+                    width: 760px;
+                }
+                @include tablet{
+                    height: 400px;
+                    width: 500px;
+                }
                 @keyframes float {
                     0% {
                         box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
@@ -71,15 +85,22 @@
                     width: 100%;
                     height: 100%;
                     object-fit: contain;
-
+                    @include desktop{
+                        object-fit: cover;
+                    }
                 }
             }
             .textContainer{
                 flex: 1;
                 display: flex;
                 flex-direction: column;
+                z-index: 0;
                 gap: 10px;
-
+                @include laptop{
+                    align-items: center;
+                    text-align: center;
+                    padding-top: 2rem;
+                }
                 span{
                     font-size: 5rem;
                     font-family: var(--font-round);
@@ -87,7 +108,15 @@
                     color: white;
                     text-shadow: 0px 10px 20px #00000060;
                     text-decoration: overline ;
-                    
+                    @include desktop{
+                        font-size: 4rem;
+                    }
+                    @include laptop{
+                        font-size: 5rem;
+                    }
+                    @include tablet{
+                        font-size: 4rem;
+                    }
                     
                 }
                 .subtitle{
@@ -97,6 +126,15 @@
                     font-size: 36px;
                     font-weight: 900;
                     font-family: var(--font-round);
+                    @include desktop{
+                        font-size: 28px;
+                    }
+                    @include laptop{
+                        font-size: 36px;
+                    }
+                    @include tablet{
+                        font-size: 30px;
+                    }
                 }
                 .description{
                     text-shadow: 1px 1px 2px #00000040;
@@ -104,6 +142,15 @@
                     color: #02735e;
                     font-size: 24px;
                     font-family: var(--font-round);
+                    @include desktop{
+                        font-size: 20px;
+                    }
+                    @include laptop{
+                        font-size: 24px;
+                    }
+                    @include tablet{
+                        font-size: 20px;
+                    }
                     
                 }
                 
@@ -119,6 +166,9 @@
                     cursor: pointer;
                     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
                     transition: 0.5s;
+                    @include laptop{
+                        
+                    }
                 }
                 button:hover{
                     letter-spacing: 2px;
