--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -87,7 +87,7 @@
         padding: 15px;
         background: linear-gradient(180deg, #fff 80%);
         border: 1px solid black;
-        color: white;
+        color: black;
         border-radius: 5px;
         font-family: var(--font-round);
         font-size: 1.2rem;
