--- a/src/Components/HireMe/hire.scss
+++ b/src/Components/HireMe/hire.scss
@@ -20,7 +20,7 @@
         font-size: 6rem;
         color: #fff;
         padding: 1rem;
-        text-shadow: 0px 10px 20px #00000060;
+        text-shadow: 0px 10px 15px #00000090;
         font-weight: 900;
         @include desktop{
             font-size: 5rem;
@@ -46,6 +46,10 @@
         @include tablet{
             width: 110%;
             height: 40%;
+        }
+        @include mobile{
+            width: 100%;
+            height: 80%;
         }
     }
 }
