--- a/src/Components/Resume/resume.scss
+++ b/src/Components/Resume/resume.scss
@@ -53,6 +53,7 @@
   font-size: 5rem;
   width: 300px;
   height: 430px;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
