--- a/src/Components/HireMe/hire.scss
+++ b/src/Components/HireMe/hire.scss
@@ -29,6 +29,9 @@
         @include tablet{
             font-size: 4rem;
         }
+        @include mobile{
+            font-size: 3rem;
+        }
     }
 
     .hire-radar{
