--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -29,6 +29,14 @@
       @include desktop{
         font-size: 70px;
       }
+      @include tablet{
+        font-size: 50px;
+        line-height: 50px;
+      }
+      @include mobile{
+        font-size: 40px;
+        line-height: 30px;
+      }
     }
     @include tablet{
       margin-bottom: 2rem;
@@ -51,6 +59,9 @@
       @include laptop{
         display: flex;
         justify-content: center;
+      }
+      @include mobile{
+        font-size: 1rem;
       }
     }
   }
@@ -94,6 +105,9 @@
         border-radius: 5px;
         font-family: var(--font-round);
         font-size: 1.2rem;
+        @include tablet{
+          height: 8vh;
+        }
       }
 
       button {
