--- a/src/Components/Parallax/parallax.scss
+++ b/src/Components/Parallax/parallax.scss
@@ -25,13 +25,20 @@
         @include laptop{
             font-size: 7rem;
         }
+        @include tablet{
+            font-size: 5.5rem;
+        }
+        @include mobile{
+            font-size: 4rem;
+        }
     }
 
     .stars{
         background-image: url('../../Assets/2-stars.png');
         background-size:contain;
         height: 100%;
-        width: 200%;
+        width: 100%;
+        overflow-x: hidden;
         position: absolute;
         z-index: 5;
     }
@@ -89,11 +96,11 @@
     .stars{
         background-image: url('../../Assets/2-stars.png');
         background-size:contain;
-        // background-repeat: repeat-x;
-
         height: 100%;
-        width: 200%;
+        width: 100%;
         position: absolute;
+        overflow-x: hidden;
+
         z-index: 5;
     }
     .mountains{
