--- a/src/Components/Portfolio/portfolio.scss
+++ b/src/Components/Portfolio/portfolio.scss
@@ -69,8 +69,9 @@
                     width: 500px;
                 }
                 @include mobile{
-                    height: 300px;
-                    width: 400px;
+                    height: 250px;
+                    width: 300px;
+                    padding: 0.5rem;
                 }
                 @keyframes float {
                     0% {
@@ -122,7 +123,7 @@
                         font-size: 5rem;
                     }
                     @include tablet{
-                        font-size: 4rem;
+                        font-size: 3rem;
                     }
                     @include mobile{
                         font-size: 3rem;
@@ -144,7 +145,7 @@
                         font-size: 36px;
                     }
                     @include tablet{
-                        font-size: 30px;
+                        font-size: 25px;
                     }
                     @include mobile{
                         font-size: 24px;
@@ -163,10 +164,10 @@
                         font-size: 24px;
                     }
                     @include tablet{
-                        font-size: 20px;
+                        font-size: 15px;
                     }
                     @include mobile{
-                        font-size: 18px;
+                        display: none;
                     }
                     
                 }
@@ -183,8 +184,13 @@
                     cursor: pointer;
                     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
                     transition: 0.5s;
-                    @include laptop{
-                        
+                    @include tablet{
+                        width: 300px;
+                        padding: 0.75rem;
+                    }
+                    @include mobile{
+                        width: 200px;
+                        padding: 0.5rem;
                     }
                 }
                 button:hover{
