--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -20,10 +20,10 @@
     width: 300px;
     background: white;
     @include tablet{
-      width: 100%;
+      width: 100vw;
     }
     @include mobile{
-      width: 100%;
+      width: 100vw;
     }
 
     .links {
@@ -39,6 +39,9 @@
       a {
         font-size: 40px;
 
+        @include desktop {
+          font-size: 30px;
+        }
         @include mobile {
           font-size: 30px;
         }
