--- a/src/Components/Skills/skill.scss
+++ b/src/Components/Skills/skill.scss
@@ -27,11 +27,17 @@
     color: #fff;
     font-size: 4rem;
     text-shadow: 0px 10px 20px #00000060;
+    @include desktop {
+      font-size: 3rem;
+    }
     @include laptop {
       font-size: 4rem;
     }
     @include tablet {
       font-size: 3rem;
+    }
+    @include mobile {
+      font-size: 2rem;
     }
   }
   .skills-chart {
@@ -49,6 +55,10 @@
       height: 50%;
       width: 100%;
       justify-content: center;
+    }
+    @include mobile {
+      height: 50%;
+      width: 100%;
     }
     .skill-bars {
       height: 50%;
@@ -119,6 +129,10 @@
   @include tablet{
     width: 4rem;
     height: 3rem;
+  }
+  @include mobile{
+    width: 2rem;
+    height: 1.3rem;
   }
 }
 .logo-container:hover {
