Added the sliding text

--- a/src/Components/Hero/hero.scss
+++ b/src/Components/Hero/hero.scss
@@ -6,6 +6,7 @@
   height: 100vh;
   width: 100%;
   padding-left: 250px;
+  overflow-x: hidden;
   background: linear-gradient(
     180deg,
     #16223b,
