--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -4,10 +4,6 @@
   width: 100vw;
   position: fixed;
   z-index: 100;
-
-  @include mobile {
-    display: none;
-  }
 }
 
 .wrapper {
@@ -18,6 +14,9 @@
   justify-content: center;
   @include tablet{
     height: 100px;
+  }
+  @include mobile{
+    height: 70px;
   }
 }
 .icon {
@@ -39,6 +38,10 @@
   @include tablet{
     padding: 10px 10px 0px;
   }
+  @include mobile{
+    border-radius: 15px;
+    padding: 7px 10px 0px;
+  }
   
   &:before {
     content: "";
@@ -50,6 +53,9 @@
     height: 3px;
     transform: translatex(-50%);
     opacity: 0.7;
+    @include mobile{
+      display: none;
+    }
   }
 
   &__item {
@@ -63,6 +69,10 @@
     align-items: center;
     justify-content: center;
     font-size: 26px;
+    @include mobile{
+      width: 40px;
+      height: 35px;
+    }
 
     &::before,
     &:after {
