--- a/src/Components/Parallax/parallax.scss
+++ b/src/Components/Parallax/parallax.scss
@@ -7,6 +7,7 @@
     position: relative;
     background-image: url('../../Assets/1-sky.png');
     background-size: cover;
+    overflow-x: hidden;
 
 
     span{
@@ -37,7 +38,7 @@
         background-image: url('../../Assets/2-stars.png');
         background-size:contain;
         height: 100%;
-        width: 100%;
+        width: 200%;
         overflow-x: hidden;
         position: absolute;
         z-index: 5;
@@ -68,6 +69,8 @@
     position: relative;
     background-image: url('../../Assets/1-skyG.png');
     background-size: cover;
+    overflow-x: hidden;
+
 
     span{
         font-size: 12rem;
@@ -97,7 +100,7 @@
         background-image: url('../../Assets/2-stars.png');
         background-size:contain;
         height: 100%;
-        width: 100%;
+        width: 200%;
         position: absolute;
         overflow-x: hidden;
 
